<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:background="#ecf1f2">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/mensagens_amigos"
                android:contentDescription="@string/imagenAmigos" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtParaIngresar"
                android:id="@+id/txtParaIngresar"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtView_Titulo"
                android:text="@string/txtView_HolaUsuario"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textIsSelectable="false"
                android:gravity="center"
                android:layout_weight="0.12" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText_nombre"
                android:hint="@string/nombre"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginBottom="120dp"
                android:layout_marginTop="20dp" />

            <Button
                android:layout_width="231dp"
                android:layout_height="wrap_content"
                android:text="@string/Aceptar"
                android:id="@+id/btnAceptar"
                android:textSize="20sp"
                android:onClick="botonSaludo"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="-80dp" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
